# edgeos

./: .gitignore  LICENSE  README.md  electron-webpack.config.js  main.ipfshash  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
electron/: electron-webpack.config.js
electron/src/main/: main.ts
electron/src/renderer/: preload.js
scripts/: start.sh  test.sh
src/: EdgeOSWASMKernel.ts  EdgeOSWASMWorker.js  IPFSRepo.ts  index.html  index.ts  memfs.js
src-electron/src/main/: main.ts
src-electron/src/renderer/: preload.js
src/Bootloader/: IBootloader.ts  NexusBootloader.ts
src/Extensions/: eosio.ts  index.ts  ipfs.ts  kms.ts  leveldb.ts  libp2p.ts  log.ts  network.ts  os.ts  web3.ts
tests/: edgeos.ts
wasm/: CMakeLists.txt  compile.sh  package-lock.json  package.json
wasm/cmake/: CMakeLists.txt  toolchain.cmake
wasm/eosio/hyperlink/: CMakeLists.txt  README.txt
wasm/eosio/hyperlink/include/common/: expiringEvents.hpp  ipfs.hpp  time.hpp
wasm/eosio/hyperlink/include/digesters/: sha256.hpp
wasm/eosio/hyperlink/include/dspConsumer/: consumer.hpp
wasm/eosio/hyperlink/include/ingester/: EosioIngester.hpp  Ingester.hpp  config.hpp
wasm/eosio/hyperlink/include/nexus/: config.hpp  nexus.hpp
wasm/eosio/hyperlink/include/publisher/: EosioPublisher.hpp  Publisher.hpp  config.hpp
wasm/eosio/hyperlink/include/verifiers/: eosio.hpp
wasm/eosio/hyperlink/src/: CMakeLists.txt
wasm/eosio/hyperlink/src/consumertest/: consumertest.cpp
wasm/eosio/hyperlink/src/ethtokenpeg/: ethtokenpeg.cpp
wasm/eosio/hyperlink/src/ethtokenpegnexus/: ethtokenpegnexus.cpp
wasm/eosio/hyperlink/src/gatehouse/: gatehouse.cpp
wasm/eosio/hyperlink/src/gatehouse2/: gatehouse2.cpp
wasm/eosio/hyperlink/src/nexus/: nexus.cpp
wasm/libs/: CMakeLists.txt
wasm/libs/boost/: CMakeLists.txt
wasm/libs/memfs/: CMakeLists.txt  memfs.c  stb_sprintf.h
wasm/plugins/: CMakeLists.txt
wasm/plugins/eosio.evm/: CMakeLists.txt  README.md
wasm/plugins/eosio.evm/include/eosio.evm/: block.hpp  context.hpp  datastream.hpp  eosio.evm.hpp  exception.hpp  tables.hpp  transaction.hpp  util.hpp
wasm/plugins/eosio.evm/src/: account.cpp  eosio.evm.cpp  instructions.cpp  stack.cpp  testing.cpp  transfer.cpp
wasm/plugins/eosio.evm/src/precompiles/: ecrecover.cpp  ripemd160.cpp  sha256.cpp
wasm/plugins/evm/: CMakeLists.txt  README.md
wasm/plugins/evm/include/evm/: block.hpp  constants.hpp  context.hpp  datastream.hpp  evm.hpp  exception.hpp  opcode.hpp  processor.hpp  program.hpp  stack.hpp  tables.hpp  transaction.hpp  util.hpp  wasm_evm.h
wasm/plugins/evm/src/: account.cpp  copy.cpp  evm.cpp  instructions.cpp  processor.cpp  stack.cpp  testing.cpp  transfer.cpp
wasm/plugins/evm/src/precompiles/: blake2b.cpp  bncurve.cpp  ecrecover.cpp  expmod.cpp  identity.cpp  index.cpp  ripemd160.cpp  sha256.cpp
wasm/processes/: CMakeLists.txt
wasm/processes/bastion/: CMakeLists.txt  process.cpp
wasm/processes/blockchain/: CMakeLists.txt  process.cpp
wasm/processes/bridge/: CMakeLists.txt  process.cpp
wasm/processes/dsp_init/: CMakeLists.txt  process.cpp
wasm/processes/fstest/: CMakeLists.txt  process.cpp
wasm/processes/include/: edgeos.h  eventFinalityManager.hpp  fsutils.h  libedgeos.h  syscalls.h
wasm/processes/initprocess/: CMakeLists.txt  process.cpp
wasm/processes/kernel/: CMakeLists.txt  kernel.cpp
wasm/processes/kernel/syscalls/: ipfs.h  log.h  os.h  syscalls.c  syscalls.h  web3.h
wasm/processes/user_init/: CMakeLists.txt  process.cpp
wasm/solidity/: CMakeLists.txt
wasm/solidity/IERC20/: IERC20.sol
wasm/solidity/Interfaces/: IClaimable.sol  IMintableToken.sol  ITokenGovernance.sol
wasm/solidity/bnttokenpeg/: TokenGovernance.sol  bnttokenpeg.sol
wasm/solidity/evmlink/: evmlink.sol
wasm/solidity/evmtokenpeg/: evmtokenpeg.sol
wasm/solidity/link/: link.sol
wasm/solidity/nexus/: Nexus.sol  Quorum.sol  nexus.sol
wasm/solidity/tokenpeg/: tokenpeg.sol
